--- a/index.html
+++ b/index.html
@@ -125,13 +125,13 @@
       <!-- Footer -->
       <footer class="footer">
          <p>&copy; 2024 [#Copyrights]. Tous droits réservés.</p>
-         <div class="language-switch">
+         <!--<div class="language-switch">
             <label for="language-select">Langue : </label>
             <select id="language-select" onchange="changeLanguage()">
                <option value="fr">Français</option>
                <option value="en">Anglais</option>
             </select>
-         </div>
+         </div>-->
       </footer>
    </body>
 </html>
