--- a/index_en.html
+++ b/index_en.html
@@ -84,15 +84,15 @@
          <h2>Gallery</h2>
          <div class="gallery-grid">
             <div class="gallery-item">
-               <img src="Images/Gallery1.webp" alt="Sculpture 1">
+               <img src="images/Gallery1.webp" alt="Sculpture 1">
                <p> </p>
             </div>
             <div class="gallery-item">
-               <img src="Images/Gallery2.webp" alt="Sculpture 2">
+               <img src="images/Gallery2.webp" alt="Sculpture 2">
                <p> </p>
             </div>
             <div class="gallery-item">
-               <img src="Images/Gallery3.webp" alt="Sculpture 3">
+               <img src="images/Gallery3.webp" alt="Sculpture 3">
                <p> </p>
             </div>
          </div>
